# pyrail-uk

./: .gitignore  CODEOWNERS  README.md  local.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
pyrail/: NationalRail.py
pyrail/api/: departures.py  url.py
pyrail/core/: types.py
pyrail_uk/: NationalRail.py  __init__.py
pyrail_uk/api/: client.py  departures.py  referencedata.py  types.py  url.py
pyrail_uk/clients/: DepartureBoard.py  ReferenceData.py
pyrail_uk/core/: exceptions.py
pyrail_uk/service/: departures.py  stations.py  types.py
pyrail_uk/utils/: array.py
tests/example_data/: departure_response.json
tests/pyrail/api/: test_url.py
tests/pyrail_uk/api/: test_url.py
tests/pyrail_uk/service/: test_departures.py  test_departures_integration.py  test_stations.py  testutils.py
