[project]
name = "pyrail-uk"
version = "0.2.0"
description = "Python SDK for dealing with the National Rail API"
readme = "README.md"
authors = [
  { name = "Christopher Khoo", email = "khoojinnwei@gmail.com" },
]
license = {text = "MIT"}
dependencies = ["requests", "cachetools", "deprecation"]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
repository = "https://github.com/thekhoo/pyrail-uk"

[project.optional-dependencies]
development = [
  # unit tests
  'pytest',
  'pytest-sugar',
  # linters
  'pyrefly',
  'ruff',
  'black',
  'isort'
]
local=["boto3", "boto3-stubs[ssm]", "python-dotenv"]
deploy=["build", "twine"]


[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.black]
line-length = 120

[tool.ruff]
# Directories to scan
include = ["pyrail_uk/**/*.py"]

[tool.pyrefly]
project-includes=["pyrail_uk/**/*.py"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"